--- a/Course/res/values/strings.xml
+++ b/Course/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">Course</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-
+    <string name="hello_world">Hello world! We\'re working on this.</string>
+	<string name="action_home">Return to Home Screen</string>
+    
 </resources>
