--- a/Course/res/values/strings.xml
+++ b/Course/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Course</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world! We\'re working on this.</string>
-	<string name="action_home">Return to Home Screen</string>
-    
+    <string name="action_home">Return to Home Screen</string>
+    <string name="title_activity_show_location">ShowLocationActivity</string>
+
 </resources>
