Added permissions for map, maps API key, and imported maps library

--- a/Course/res/values/strings.xml
+++ b/Course/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="hello_world">Hello world! We\'re working on this.</string>
     <string name="action_home">Return to Home Screen</string>
     <string name="title_activity_show_location">ShowLocationActivity</string>
+    <string name="button_get_location">"Get my location now</string>
 
 </resources>
