Added basic map view layout and called it from the main activity

--- a/Course/res/values/strings.xml
+++ b/Course/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="action_home">Return to Home Screen</string>
     <string name="title_activity_show_location">ShowLocationActivity</string>
     <string name="button_get_location">"Get my location now</string>
-
+	<string name="google_play_error_message">"Unable to connect to Google Play Services.  Sorry about that."</string>
+    
 </resources>
