--- a/Course/res/values/strings.xml
+++ b/Course/res/values/strings.xml
@@ -6,7 +6,12 @@
     <string name="hello_world">Hello world! We\'re working on this.</string>
     <string name="action_home">Return to Home Screen</string>
     <string name="title_activity_show_location">ShowLocationActivity</string>
-    <string name="button_get_location">"Get my location now</string>
-	<string name="google_play_error_message">"Unable to connect to Google Play Services.  Sorry about that."</string>
+    <string name="button_get_location">Get my location now</string>
+	<string name="google_play_error_message">Unable to connect to Google Play Services.  Sorry about that.</string>
+	<string name="menu_normal">Normal</string>
+	<string name="menu_satellite">Satellite</string>
+	<string name="menu_terrain">Terrain</string>
+	<string name="menu_hybrid">Hybrid</string>
+	<string name="current_location">Current Location</string>
     
 </resources>
