--- a/Course/res/values/strings.xml
+++ b/Course/res/values/strings.xml
@@ -23,5 +23,10 @@
     <string name="stop">Stop</string>
     <string name="resume">Resume</string>
     <string name="reset_map">Reset Map</string>
+    <string name="finished">Finished</string>
+    <string name="title_activity_run_statistics">RunStatistics</string>
+    <string name="button_graph_altitude">Altitude</string>
+    <string name="button_graph_speed">Speed</string>
+    <string name="button_show_stats">Statistics</string>
 
 </resources>
