Implemented Google Play Services license in a new activity

--- a/Course/res/values/strings.xml
+++ b/Course/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="button_graph_altitude">Altitude</string>
     <string name="button_graph_speed">Speed</string>
     <string name="button_show_stats">Statistics</string>
+    <string name="gp_license">Google Play License</string>
 
 </resources>
