--- a/Course/res/values/strings.xml
+++ b/Course/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">Course</string>
     <string name="activity_route_list">Select a route to view</string>
-    <string name="activity_delete_route_list">Select a route to delete</string>
+    <string name="activity_delete_route_list">Select the routes to delete</string>
     <string name="action_home">Return to Home Screen</string>
     <string name="button_get_location">Get my location now</string>
     <string name="google_play_error_message">Unable to connect to Google Play Services.  Sorry about that.</string>
@@ -22,7 +22,7 @@
     <string name="enter_run_name">Enter new route name</string>
     <string name="button_draw_map">Go!</string>
     <string name="map_info">Course Detail</string>
-    <string name="stop">Stop</string>
+    <string name="stop">Pause Map</string>
     <string name="resume">Resume</string>
     <string name="reset_map">Reset Map</string>
     <string name="finished">Finished</string>
