--- a/Course/res/values/strings.xml
+++ b/Course/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="button_show_stats">Statistics</string>
     <string name="gp_license">Google Play License</string>
     <string name="show_stats">Statistics</string>
-    <string name="show_older_times">Comparison</string>
+    <string name="show_older_times">Compare</string>
     <string name="use_metric">Distances in meters, km</string>
     <string name="use_imperial">Distances in feet, mi</string>
     <string name="quitApp">Exit App</string>
